# misis2023f-22-01-makhrov-m-a

./: CMakeLists.txt  CMakePresets.json  codeforces.id  readme.md  status.md
docs/: report.md
prj.codeforces/: 0001a.cpp  0004a.cpp  0041a.cpp  0050a.cpp  0158a.cpp  0231a.cpp  0263a.cpp  0266a.cpp  0281a.cpp  0339b.cpp  0617a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp
