add_executable(0001a 0001a.cpp)
add_executable(0004a 0004a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0112a 0112a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0339a 0339a.cpp)
add_executable(0617a 0617a.cpp)
