add_executable(0001a 0001a.cpp)
add_executable(0004a 0004a.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0059a 0059a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0110a 0110a.cpp)
add_executable(0112a 0112a.cpp)
add_executable(0151a 0151a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0199a 0199a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0266a 0266a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0339a 0339a.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0734a 0734a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(0884a 0884a.cpp)
add_executable(0977a 0977a.cpp)
add_executable(1407a 1407a.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1771a 1771a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1886a 1886a.cpp)
